--- a/nachwuchsgruppe.tex
+++ b/nachwuchsgruppe.tex
@@ -68,6 +68,7 @@
 \definecolor{tabOlive}{HTML}{bcbd22}
 \definecolor{tabCyan}{HTML}{17becf}
 
+% comment commants change the initials to those of people you work with.
 \newcommand{\MW}[1]{{\color{tabGreen} {\bf (MW: #1)}}}
 \newcommand{\HVh}[1]{{\color{tabBlue} {\bf (HVh: #1)}}}
 \newcommand{\LV}[1]{{\color{tabOlive} {\bf (LV: #1)}}}
